# chaoscontrol

./: .gitignore  Cargo.toml  GLOSSARY.md  README.md  flake.nix  result-net
.agent/: napkin.md  plan.md
.cargo/: config.toml
bug-hunt-results/accept_stale_term/: checkpoint.json  report.txt  stderr.txt  stdout.txt
bug-hunt-results/double_vote/: checkpoint.json  report.txt  stderr.txt  stdout.txt
bug-hunt-results/fig8_commit/: checkpoint.json  stderr.txt  stdout.txt
bug-hunt-results/leader_no_stepdown/: checkpoint.json  report.txt  stderr.txt  stdout.txt
bug-hunt-results/none/: report.txt  stderr.txt  stdout.txt
bug-hunt-results/premature_commit/: stderr.txt  stdout.txt
bug-hunt-results/skip_truncate/: checkpoint.json  report.txt  stderr.txt
crates/chaoscontrol-explore/: Cargo.toml
crates/chaoscontrol-explore/src/: checkpoint.rs  corpus.rs  coverage.rs  explorer.rs  frontier.rs  input_tree.rs  lib.rs  mutator.rs  report.rs
crates/chaoscontrol-fault/: Cargo.toml
crates/chaoscontrol-fault/src/: engine.rs  faults.rs  lib.rs  oracle.rs  schedule.rs
crates/chaoscontrol-guest/: Cargo.toml
crates/chaoscontrol-guest-net/: Cargo.toml
crates/chaoscontrol-guest-net/src/: lib.rs
crates/chaoscontrol-guest/src/: main.rs
crates/chaoscontrol-net-guest/: Cargo.toml
crates/chaoscontrol-net-guest/src/: main.rs
crates/chaoscontrol-protocol/: Cargo.toml
crates/chaoscontrol-protocol/src/: lib.rs
crates/chaoscontrol-raft-guest/: Cargo.toml
crates/chaoscontrol-raft-guest/src/: lib.rs  main.rs
crates/chaoscontrol-replay/: Cargo.toml
crates/chaoscontrol-replay/src/: checkpoint.rs  debugger.rs  lib.rs  recording.rs  replay.rs  serialize.rs  triage.rs
crates/chaoscontrol-sdk/: Cargo.toml
crates/chaoscontrol-sdk/src/: assert.rs  coverage.rs  internal.rs  kcov.rs  lib.rs  lifecycle.rs  prelude.rs  random.rs  transport.rs
crates/chaoscontrol-trace/: Cargo.toml  build.rs
crates/chaoscontrol-trace/src/: collector.rs  events.rs  lib.rs  verifier.rs
crates/chaoscontrol-trace/src/bpf/: kvm_trace.bpf.c
crates/chaoscontrol-trace/src/verified/: events.rs  mod.rs  verifier.rs
crates/chaoscontrol-trace/verus/: events_spec.rs  verifier_spec.rs
crates/chaoscontrol-vmm/: Cargo.toml
crates/chaoscontrol-vmm/src/: acpi.rs  controller.rs  cpu.rs  lib.rs  memory.rs  perf.rs  scheduler.rs  snapshot.rs  vm.rs
crates/chaoscontrol-vmm/src/devices/: block.rs  entropy.rs  mod.rs  net.rs  pit.rs  serial.rs  virtio_block.rs  virtio_entropy.rs  virtio_mmio.rs  virtio_net.rs
crates/chaoscontrol-vmm/src/verified/: block.rs  cpu.rs  entropy.rs  memory.rs  mod.rs  net.rs  pit.rs
crates/chaoscontrol-vmm/verus/: block_spec.rs  cpu_spec.rs  entropy_spec.rs  memory_spec.rs  net_spec.rs  pit_spec.rs
docs/: deterministic-simulation-hypervisor.md  deterministic-vmm-design.md  virtio-mmio.md
scripts/: bug-hunt.sh  build-guest.sh  build-net-guest.sh  build-raft-guest.sh  test-trace.sh
tools/tracing/: kvm-determinism-check.bt  kvm-exit-profile.bt  kvm-pit-calibration.bt  trace-boot.sh
