[workspace]
members = [
    "crates/chaoscontrol-protocol",
    "crates/chaoscontrol-sdk",
    "crates/chaoscontrol-fault",
    "crates/chaoscontrol-vmm",
    "crates/chaoscontrol-trace",
    "crates/chaoscontrol-explore",
    "crates/chaoscontrol-replay",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ChaosControl Contributors"]
license = "Apache-2.0"
