[package]
name = "chaoscontrol-guest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal SDK-instrumented guest for ChaosControl exploration"

[dependencies]
chaoscontrol-sdk = { path = "../chaoscontrol-sdk" }
libc = "0.2"
serde_json = "1.0"
