[package]
name = "chaoscontrol-raft-guest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "In-process Raft consensus guest for ChaosControl exploration"

[lib]
name = "chaoscontrol_raft_guest"
path = "src/lib.rs"

[[bin]]
name = "chaoscontrol-raft-guest"
path = "src/main.rs"

[dependencies]
chaoscontrol-sdk = { path = "../chaoscontrol-sdk" }
libc = "0.2"
serde_json = "1.0"
