[package]
name = "chaoscontrol-replay"
version = "0.1.0"
edition = "2021"
description = "Time-travel debugging and replay for ChaosControl"

[dependencies]
chaoscontrol-vmm = { path = "../chaoscontrol-vmm" }
chaoscontrol-fault = { path = "../chaoscontrol-fault" }
chaoscontrol-protocol = { path = "../chaoscontrol-protocol" }
log = "0.4"
snafu = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
rand_chacha = "0.3"

[[bin]]
name = "chaoscontrol-replay"
path = "src/bin/chaoscontrol-replay.rs"
