[package]
name = "chaoscontrol-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Guest-side SDK for ChaosControl deterministic simulation testing"

[features]
default = []
std = ["chaoscontrol-protocol/std", "libc"]

[dependencies]
chaoscontrol-protocol = { path = "../chaoscontrol-protocol" }
libc = { version = "0.2", optional = true }
